# Smart-Tutor-Lite

./: .firebaserc  .gitattributes  .gitignore  BUILD_INSTRUCTIONS.md  HACKATHON_COMPLIANCE.md  LICENSE  OFFLINE_CAPABILITIES.md  README.md  SETUP.md  allfileshas.txt  firebase.json  pubspec.yaml
.claude/: settings.local.json
.cursor/plans/: smarttutor-lite-complete-implementation-plan-afea599a.plan.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp  whisper_wrapper.h
docs/: API_DOCUMENTATION.md  ELEVENLABS_TTS_SETUP.md  FIREBASE_SETUP.md  GOOGLE_TTS_SETUP.md  PERFORMANCE_BENCHMARKS.md  PHASE_5_COMPLETION_SUMMARY.md  TTS_MIGRATION_SUMMARY.md  bug-fixes-plan.md
functions/: .gitignore  README.md  package-lock.json  package.json
functions/lib/: index.js  index.js.map
functions/lib/api/: flashcards.js  flashcards.js.map  quizzes.js  quizzes.js.map  summaries.js  summaries.js.map  transcriptions.js  transcriptions.js.map  tts.js  tts.js.map
functions/lib/config/: elevenlabs-tts.js  elevenlabs-tts.js.map  firebase-admin.js  firebase-admin.js.map  openai.js  openai.js.map  soniox.js  soniox.js.map
functions/lib/utils/: firestore-helpers.js  firestore-helpers.js.map  openai-helpers.js  openai-helpers.js.map  soniox-helpers.js  soniox-helpers.js.map  storage-helpers.js  storage-helpers.js.map  tts-helpers.js  tts-helpers.js.map
functions/src/: index.ts
functions/src/api/: flashcards.ts  jobs.ts  quizzes.ts  summaries.ts  transcriptions.ts  tts.ts
functions/src/config/: elevenlabs-tts.ts  firebase-admin.ts  gemini.ts  google-tts.ts  openai.ts  soniox.ts
functions/src/utils/: firestore-helpers.ts  gcs-helpers.ts  gemini-helpers.ts  google-tts-helpers.ts  openai-helpers.ts  operation-poller.ts  soniox-helpers.ts  storage-helpers.ts  tts-helpers.ts
functions/src/workers/: cleanup-jobs.ts  transcription-jobs.ts
ios/: GoogleService-Info.plist  METAL_SETUP.md  Podfile
ios/Runner/: AppDelegate.swift  Info.plist  PerformancePlugin.swift  Runner-Bridging-Header.h  WhisperPlugin.swift  whisper_wrapper.h  whisper_wrapper.mm
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  injection_container.config.dart  injection_container.dart  main.dart
lib/app/: app.dart  main_navigation.dart  routes.dart
lib/core/constants/: api_constants.dart  app_constants.dart
lib/core/errors/: failures.dart
lib/core/network/: api_client.dart  network_info.dart
lib/core/services/: audio_converter.dart  audio_file_manager.dart
lib/core/sync/: queue_sync_service.dart
lib/core/theme/: app_colors.dart  app_theme.dart
lib/core/utils/: logger.dart  performance_monitor.dart
lib/dialog/: dialogs.dart
lib/features/auth/data/datasources/: auth_local_datasource.dart  auth_remote_datasource.dart
lib/features/auth/data/repositories/: auth_repository_impl.dart
lib/features/auth/domain/entities/: app_user.dart
lib/features/auth/domain/repositories/: auth_repository.dart
lib/features/auth/domain/usecases/: check_auth_status.dart  check_email_verified.dart  delete_account.dart  send_email_verification.dart  send_password_reset_email.dart  sign_in_with_email.dart  sign_in_with_google.dart  sign_out.dart  sign_up_with_email.dart  update_profile_photo.dart  update_username.dart
lib/features/auth/presentation/bloc/: auth_bloc.dart  auth_event.dart  auth_state.dart
lib/features/auth/presentation/pages/: forgot_password_screen.dart  login_screen.dart  signup_screen.dart  verify_email_screen.dart
lib/features/home/presentation/pages/: home_dashboard_page.dart
lib/features/home/presentation/widgets/: create_folder_dialog.dart  dashboard_folder_card.dart  folder_picker_dialog.dart  rename_folder_dialog.dart  study_folders_section.dart
lib/features/profile/presentation/pages/: profile_page.dart
lib/features/quiz/data/datasources/: quiz_queue_local_datasource.dart  quiz_remote_datasource.dart
lib/features/quiz/data/models/: question_model.dart  quiz_model.dart  quiz_result_model.dart
lib/features/quiz/data/repositories/: quiz_repository_impl.dart
lib/features/quiz/domain/entities/: question.dart  quiz.dart  quiz_result.dart
lib/features/quiz/domain/repositories/: quiz_repository.dart
lib/features/quiz/domain/usecases/: generate_quiz.dart  submit_quiz.dart
lib/features/quiz/presentation/bloc/: quiz_bloc.dart  quiz_event.dart  quiz_state.dart
lib/features/quiz/presentation/pages/: quiz_creation_page.dart  quiz_results_page.dart  quiz_taking_page.dart
lib/features/settings/presentation/pages/: settings_page.dart
lib/features/study_folders/data/datasources/: folder_material_local_datasource.dart  study_folder_local_datasource.dart
lib/features/study_folders/data/repositories/: study_folder_repository_impl.dart
lib/features/study_folders/domain/entities/: folder_material.dart  study_folder.dart
lib/features/subscription/: README.md
lib/features/text_to_speech/utils/: tts_error_mapper.dart
lib/native_bridge/: performance_bridge.dart  whisper_ffi.dart  whisper_lifecycle_observer.dart  whisper_model_manager.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
scripts/: setup_whisper.sh
test/unit/: queued_transcription_job_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+91 files in other folders)
